[package]
name = "lecture6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "env"] }
rand = "0.8.5"
smoltcp = { version = "0.6.0", features = ["proto-igmp", "proto-ipv4", "verbose", "log"] }
trust-dns = { version = "0.16.0", default-features = false }
url = "2"